[package]
name = "Bomberman"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = "0.30.4"
png = "0.17.16"
rand = "0.9.2"
tobj = "4.0.3"
vulkano = "0.35.1"
vulkano-shaders = "0.35.0"
winit = { version = "0.30.11", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.10"
