[package]
name = "Bomberman"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = { version = "0.30.4", features = ["serde"] }
png = "0.17.16"
rand = "0.9.2"
tobj = "4.0.3"
vulkano = "0.35.1"
vulkano-shaders = "0.35.0"
winit = { version = "0.30.11", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.10"
rodio = "0.19.0"
anyhow = "1.0"
once_cell = "1.21.3"
gilrs = { version = "0.11.0", features = ["serde-serialize"] }
